@@ -2,7 +2,8 @@
 Changes with Apache 2.5.0
 
   *) mod_ssl: Send the error message for speaking http to an https port using
-     HTTP/1.0 instead of HTTP/0.9. PR 50823. [Stefan Fritsch]
+     HTTP/1.0 instead of HTTP/0.9, and omit the link that may be wrong when
+     using SNI. PR 50823. [Stefan Fritsch]
 
   *) mod_authz_core: Fix parsing of Require arguments in <AuthzProviderAlias>.
      PR 53048. [Stefan Fritsch]
